openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_CustomHbondForce_getDonorParameters(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        d1: *mut ::std::os::raw::c_int,
        d2: *mut ::std::os::raw::c_int,
        d3: *mut ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setDonorParameters(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        d1: ::std::os::raw::c_int,
        d2: ::std::os::raw::c_int,
        d3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addAcceptor(
        target: *mut OpenMM_CustomHbondForce,
        a1: ::std::os::raw::c_int,
        a2: ::std::os::raw::c_int,
        a3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getAcceptorParameters(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        a1: *mut ::std::os::raw::c_int,
        a2: *mut ::std::os::raw::c_int,
        a3: *mut ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setAcceptorParameters(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        a1: ::std::os::raw::c_int,
        a2: ::std::os::raw::c_int,
        a3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addExclusion(
        target: *mut OpenMM_CustomHbondForce,
        donor: ::std::os::raw::c_int,
        acceptor: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getExclusionParticles(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        donor: *mut ::std::os::raw::c_int,
        acceptor: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setExclusionParticles(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        donor: ::std::os::raw::c_int,
        acceptor: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addTabulatedFunction(
        target: *mut OpenMM_CustomHbondForce,
        name: *const ::std::os::raw::c_char,
        function: *mut OpenMM_TabulatedFunction,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getTabulatedFunction(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> *mut OpenMM_TabulatedFunction;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getTabulatedFunctionName(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addFunction(
        target: *mut OpenMM_CustomHbondForce,
        name: *const ::std::os::raw::c_char,
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getFunctionParameters(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        name: *mut *mut ::std::os::raw::c_char,
        values: *mut OpenMM_DoubleArray,
        min: *mut f64,
        max: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setFunctionParameters(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_updateParametersInContext(
        target: *mut OpenMM_CustomHbondForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomHbondForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_Continuous1DFunction_create(
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    ) -> *mut OpenMM_Continuous1DFunction;
}
extern "C" {
    pub fn OpenMM_Continuous1DFunction_destroy(target: *mut OpenMM_Continuous1DFunction);
}
extern "C" {
    pub fn OpenMM_Continuous1DFunction_getFunctionParameters(
        target: *const OpenMM_Continuous1DFunction,
        values: *mut OpenMM_DoubleArray,
        min: *mut f64,
        max: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_Continuous1DFunction_setFunctionParameters(
        target: *mut OpenMM_Continuous1DFunction,
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    );
}
extern "C" {
    pub fn OpenMM_Continuous1DFunction_Copy(
        target: *const OpenMM_Continuous1DFunction,
    ) -> *mut OpenMM_Continuous1DFunction;
}
extern "C" {
    pub fn OpenMM_Discrete3DFunction_create(
        xsize: ::std::os::raw::c_int,
        ysize: ::std::os::raw::c_int,
        zsize: ::std::os::raw::c_int,
        values: *const OpenMM_DoubleArray,
    ) -> *mut OpenMM_Discrete3DFunction;
}
extern "C" {
    pub fn OpenMM_Discrete3DFunction_destroy(target: *mut OpenMM_Discrete3DFunction);
}
extern "C" {
    pub fn OpenMM_Discrete3DFunction_getFunctionParameters(
        target: *const OpenMM_Discrete3DFunction,
        xsize: *mut ::std::os::raw::c_int,
        ysize: *mut ::std::os::raw::c_int,
        zsize: *mut ::std::os::raw::c_int,
        values: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_Discrete3DFunction_setFunctionParameters(
        target: *mut OpenMM_Discrete3DFunction,
        xsize: ::std::os::raw::c_int,
        ysize: ::std::os::raw::c_int,
        zsize: ::std::os::raw::c_int,
        values: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_Discrete3DFunction_Copy(
        target: *const OpenMM_Discrete3DFunction,
    ) -> *mut OpenMM_Discrete3DFunction;
}
extern "C" {
    pub fn OpenMM_OpenMMException_create(
        message: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_OpenMMException;
}
extern "C" {
    pub fn OpenMM_OpenMMException_destroy(target: *mut OpenMM_OpenMMException);
}
extern "C" {
    pub fn OpenMM_OpenMMException_what(
        target: *const OpenMM_OpenMMException,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_create(
        defaultPressure: f64,
        defaultTemperature: f64,
        frequency: ::std::os::raw::c_int,
    ) -> *mut OpenMM_MonteCarloBarostat;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_destroy(target: *mut OpenMM_MonteCarloBarostat);
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_Pressure() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_Temperature() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_getDefaultPressure(
        target: *const OpenMM_MonteCarloBarostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_setDefaultPressure(
        target: *mut OpenMM_MonteCarloBarostat,
        pressure: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_getFrequency(
        target: *const OpenMM_MonteCarloBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_setFrequency(
        target: *mut OpenMM_MonteCarloBarostat,
        freq: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_getDefaultTemperature(
        target: *const OpenMM_MonteCarloBarostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_setDefaultTemperature(
        target: *mut OpenMM_MonteCarloBarostat,
        temp: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_getRandomNumberSeed(
        target: *const OpenMM_MonteCarloBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_setRandomNumberSeed(
        target: *mut OpenMM_MonteCarloBarostat,
        seed: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloBarostat_usesPeriodicBoundaryConditions(
        target: *const OpenMM_MonteCarloBarostat,
    ) -> OpenMM_Boolean;
}
pub const OpenMM_GayBerneForce_NonbondedMethod_OpenMM_GayBerneForce_NoCutoff:
    OpenMM_GayBerneForce_NonbondedMethod = 0;
pub const OpenMM_GayBerneForce_NonbondedMethod_OpenMM_GayBerneForce_CutoffNonPeriodic:
    OpenMM_GayBerneForce_NonbondedMethod = 1;
pub const OpenMM_GayBerneForce_NonbondedMethod_OpenMM_GayBerneForce_CutoffPeriodic:
    OpenMM_GayBerneForce_NonbondedMethod = 2;
pub type OpenMM_GayBerneForce_NonbondedMethod = u32;
extern "C" {
    pub fn OpenMM_GayBerneForce_create() -> *mut OpenMM_GayBerneForce;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_destroy(target: *mut OpenMM_GayBerneForce);
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getNumParticles(
        target: *const OpenMM_GayBerneForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getNumExceptions(
        target: *const OpenMM_GayBerneForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getNonbondedMethod(
        target: *const OpenMM_GayBerneForce,
    ) -> OpenMM_GayBerneForce_NonbondedMethod;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setNonbondedMethod(
        target: *mut OpenMM_GayBerneForce,
        method: OpenMM_GayBerneForce_NonbondedMethod,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getCutoffDistance(target: *const OpenMM_GayBerneForce) -> f64;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setCutoffDistance(target: *mut OpenMM_GayBerneForce, distance: f64);
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getUseSwitchingFunction(
        target: *const OpenMM_GayBerneForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setUseSwitchingFunction(
        target: *mut OpenMM_GayBerneForce,
        use_: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getSwitchingDistance(target: *const OpenMM_GayBerneForce) -> f64;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setSwitchingDistance(
        target: *mut OpenMM_GayBerneForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_addParticle(
        target: *mut OpenMM_GayBerneForce,
        sigma: f64,
        epsilon: f64,
        xparticle: ::std::os::raw::c_int,
        yparticle: ::std::os::raw::c_int,
        sx: f64,
        sy: f64,
        sz: f64,
        ex: f64,
        ey: f64,
        ez: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_GayBerneForce_getParticleParameters(
        target: *const OpenMM_GayBerneForce,
        index: ::std::os::raw::c_int,
        sigma: *mut f64,
        epsilon: *mut f64,
        xparticle: *mut ::std::os::raw::c_int,
        yparticle: *mut ::std::os::raw::c_int,
        sx: *mut f64,
        sy: *mut f64,
        sz: *mut f64,
        ex: *mut f64,
        ey: *mut f64,
        ez: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setParticleParameters(
        target: *mut OpenMM_GayBerneForce,
        index: ::std::os::raw::c_int,
        sigma: f64,
        epsilon: f64,
        xparticle: ::std::os::raw::c_int,
        yparticle: ::std::os::raw::c_int,
        sx: f64,
        sy: f64,
        sz: f64,
        ex: f64,
        ey: f64,
        ez: f64,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_addException(
        target: *mut OpenMM_GayBerneForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        sigma: f64,
        epsilon: f64,
        replace: OpenMM_Boolean,
    ) -> ::std::os::raw::c_int;
}
